[tool.poetry]
name = "testdriven-flask-celery"
version = "0.1.0"
description = "Output from testdriven.io's 'The Definitive Guide to Celery and Flask'"
authors = ["Ülgen Sarıkavak <ulgensrkvk@gmail.com>"]
license = "MIT"

[tool.poetry.dev-dependencies]

[tool.poetry.dependencies]
python = "3.9.7"


[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"
